<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lytContainer"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/auth_container">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="20.0dip"
            android:gravity="center"
            android:text="@string/device_tracker_disclaimer_message"
            android:textColor="@color/zebraBlack"
            android:textSize="16.0sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@id/auth_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16.0dip"
            android:layout_marginRight="16.0dip">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="8.0dip"
            android:text="@string/next" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/userInfoLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/auth_container">

        <TextView
            android:id="@+id/txtUserInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="20.0dip"
            android:gravity="center"
            android:textColor="@color/zebraBlack"
            android:textSize="16.0sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="24.0dip"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnStartLockTask"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="16.0dip"
            android:layout_marginTop="8.0dip"
            android:layout_marginRight="8.0dip"
            android:layout_weight="1.0"
            android:text="@string/start_lock_task" />

        <Button
            android:id="@+id/button_cancel"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="8.0dip"
            android:layout_marginTop="8.0dip"
            android:layout_marginRight="16.0dip"
            android:layout_weight="1.0"
            android:text="@string/stop_lock_task" />
    </LinearLayout>
</RelativeLayout>