<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@android:style/ThemeOverlay.Material.Light"
    android:background="@android:color/white"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="vertical"
    tools:context=".MainActivity">
    <!--android:theme="@style/Theme.MaterialComponents.Dialog"-->
    <!--android:background="@android:drawable/alert_light_frame"-->
    <!--android:theme="@android:style/Theme.Material.NoActionBar.Fullscreen"-->

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <RelativeLayout
            android:id="@+id/form_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <TextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="16dp"
                android:text="@string/device_tracker_disclaimer_message"
                android:textColor="@color/zebraBlack"
                android:textSize="16.0sp"
                android:textStyle="bold" />

            <!--<com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header"
                android:layout_margin="16.0dip" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>-->

            <EditText
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/user_name"
                android:layout_below="@+id/header"
                android:theme="@android:style/TextAppearance.Widget.EditText"
                android:visibility="visible"
                tools:visibility="visible" />

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:visibility="gone"
                android:inputType="textPersonName"
                android:hint="@string/password" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/next" />
            <!--style="@style/Widget.AppCompat.Button.Colored"-->

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:theme="@android:style/Widget.Material.Button.Colored"
                android:text="@string/cancel" />



        </RelativeLayout>
    </ScrollView>
</RelativeLayout>